<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.numan1617.steam_game_picker.activities.ViewGamesList"
    tools:ignore="MergeRootFrame">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/steamProfileContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:background="@drawable/view_game_list_profile_container_bottom_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/steamProfileImage"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_marginRight="@dimen/activity_view_games_profile_vertical_margin"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_view_games_profile_vertical_margin">

                <TextView
                    android:id="@+id/steamProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/login_text"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/activity_view_games_profile_vertical_margin"/>

                <LinearLayout
                    android:id="@+id/memberSinceContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_view_games_profile_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_view_games_profile_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/profile_confirm_text_horizontal_margin"
                        android:text="@string/main_activity_member_since"
                        android:textColor="@color/login_text" />

                    <TextView
                        android:id="@+id/steamProfileMemberSince"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/profile_confirm_text_horizontal_margin"
                        android:textColor="@color/login_text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gameCountContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_view_games_profile_vertical_margin"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/profile_confirm_text_horizontal_margin"
                        android:text="@string/games_list_games_count"
                        android:textColor="@color/login_text" />

                    <TextView
                        android:id="@+id/steamGameCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/login_text"
                        android:layout_marginLeft="@dimen/profile_confirm_text_horizontal_margin" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/selectRandomGame"
            android:layout_below="@+id/steamProfileContainer">

            <ListView
                android:id="@+id/gamesListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:listSelector="@android:color/transparent"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/gamesListProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/noSteamGames"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_steam_games"
                android:layout_gravity="center"/>

        </FrameLayout>

        <Button
            android:id="@+id/selectRandomGame"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/select_random_game"
            android:paddingTop="@dimen/login_text_vertical_padding"
            android:paddingBottom="@dimen/login_text_vertical_padding"
            android:paddingLeft="@dimen/login_text_horizontal_padding"
            android:paddingRight="@dimen/login_text_horizontal_padding"
            android:background="@drawable/btn_negative"
            android:textColor="@color/login_text"
            android:onClick="randomGameClicked"/>

    </RelativeLayout>

</FrameLayout>
